add shadow-text on titles and adapt size for join

--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -3,10 +3,10 @@
   <div>
     <p class="font-capital-daren-italic text-[2.9rem] leading-[2.5rem]
     xs:text-[3.5rem] sx:leading-[1rem] sm:text-[4.5rem] sm:leading-[2rem]
-    md:text-[5.5rem] md:leading-[3rem] lg:text-[3.5rem] lg:leading-[2rem] text-center">participa en diferentes</p>
+    md:text-[5.5rem] md:leading-[3rem] lg:text-[3.5rem] lg:leading-[2rem] text-center text-shadow">participa en diferentes</p>
     <p class="font-capital-daren-italic text-[4rem] leading-[6rem] mb-3
     xs:text-[6rem] xs:leading-[8rem] xs:mb-8 sm:text-[8rem] sm:leading-[10rem]
-    md:text-[9rem] md:leading-[11rem] lg:text-[9rem] lg:leading-[11rem] text-center">actividades</p>
+    md:text-[9rem] md:leading-[11rem] lg:text-[9rem] lg:leading-[11rem] text-center text-shadow">actividades</p>
     <div class="flex flex-wrap justify-center gap-5 md:gap-16">
       <button class="btn text-[2rem] lg:text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white">únete al filo</button>
       <button class="btn bg-alfilo-blue text-[2rem] lg:text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white">juega star citizen</button>
