--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -7,7 +7,7 @@
 <!--  <app-footer class="footer-test"></app-footer>-->
 <!--</div>-->
 
-<!-- <app-landing-join></app-landing-join> -->
+<app-landing-join></app-landing-join>
 <app-landing-activities></app-landing-activities>
 <!-- <app-landing-chronology></app-landing-chronology>
 <app-landing-creators></app-landing-creators> -->
