--- a/src/app/components/landing-chronology/landing-chronology.component.html
+++ b/src/app/components/landing-chronology/landing-chronology.component.html
@@ -2,7 +2,7 @@
 bg-cover bg-center sm:pb-20 relative flex flex-col">
   <div class="absolute h-[95%] top-0 left-0 border-b-2 border-b-2 border-r-2 rounded-br-2xl sm:w-0
   lg:w-[50%] lg:min-w-[754px]"></div>
-  <div class="text-[9rem] text-center font-capital-daren-italic lg:w-[50%] lg:min-w-[754px]">cronología</div>
+  <div class="text-[9rem] text-center font-capital-daren-italic lg:w-[50%] lg:min-w-[754px] text-shadow">cronología</div>
     <div #carouselChronology class="custom-corusel lg:hidden">
       <ng-template ngFor let-event [ngForOf]="events" let-i="index">
         <app-basic-card class="carousel-cell w-[35rem] mr-10" srcImage={{event.image}} title={{event.title}} body={{event.body}}></app-basic-card>
