--- a/src/app/components/landing-creators/landing-creators.component.html
+++ b/src/app/components/landing-creators/landing-creators.component.html
@@ -1,8 +1,8 @@
 <div class="landing-contact-us w-full bg-[url('/assets/images/bg-content-creators.jpg')] bg-cover bg-center pt-10 pb-28">
   <div class="flex flex-col items-center">
-    <p class="font-capital-daren-italic text-[10vw] lg:text-[5.5rem] lg:leading-[5rem]">CONOCE NUESTROS</p>
-    <p class="font-capital-daren-italic text-[10vw] lg:text-[4.5rem] lg:leading-[4rem]">CREADORES DE</p>
-    <p class="font-capital-daren-italic text-[10vw] lg:text-[10rem]  lg:leading-[11rem]">CONTENIDO</p>
+    <p class="font-capital-daren-italic text-[10vw] lg:text-[5.5rem] lg:leading-[5rem] text-shadow">CONOCE NUESTROS</p>
+    <p class="font-capital-daren-italic text-[10vw] lg:text-[4.5rem] lg:leading-[4rem] text-shadow">CREADORES DE</p>
+    <p class="font-capital-daren-italic text-[10vw] lg:text-[10rem]  lg:leading-[11rem] text-shadow">CONTENIDO</p>
   </div>
   <div #creatorsCarousel class="custom-corusel w-full mt-16">
     <ng-template ngFor let-creator [ngForOf]="creators">
