--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -1,10 +1,10 @@
-<div class="w-full flex flex-col items-center gap-80 2xl:gap-10 relative ">
+<div class="w-full flex flex-col items-center gap-16 xxs:gap-20 xs:gap-40 sm:gap-80 2xl:gap-10 relative ">
   <video #myVideo class="absolute w-full m-auto h-[85%] top-0 left-0 object-cover -z-10" autoplay loop muted playsinline src="assets/videos/video.mp4"></video>
   <img src="/assets/images/logo.svg" alt="Logo" class="w-40 pt-20"/>
   <div class="flex flex-col items-center gap-10">
-    <p class="font-capital-daren text-5xl md:text-7xl lg:text-8xl xl:text-9xl text-center">LA AVENTURA TE ESPERA</p>
+    <p class="font-capital-daren text-shadow text-5xl xs:text-[4.2rem] sm:text-[4.5rem] md:text-[5rem] md:text-7xl lg:text-8xl xl:text-9xl text-center">LA AVENTURA TE ESPERA</p>
     <a href="https://discord.com/invite/ADgezdG" target="_blank"
-       class="btn md:btn-lg text-black ring-2 ring-white rounded-2xl font-black lg:hidden">Únete
+       class="btn font-normal md:btn-lg text-black ring-2 ring-white rounded-2xl text-[2rem] xxs:text-[2rem] xs:px-[1.5rem] sm:text-[2.2rem] md:text-[2.5rem] font-capital-daren lg:hidden">Únete
       a AlFilo</a>
     <div class="hidden lg:block">
       <a href="https://discord.com/invite/ADgezdG" target="_blank"
@@ -14,13 +14,13 @@
         <p class="absolute text-anim z-0">Únete a AlFilo</p>
       </a>
     </div>
-    <div class="flex flex-wrap gap-5 justify-center px-10 pb-20  ">
-      <app-basic-card class="flex w-full lg:max-w-xl xl:max-w-xl h-72 " srcImage="info_alfilo.png" title="AL FILO"
+    <div class="flex flex-wrap gap-5 justify-center px-2 sm:px-10 pb-20">
+      <app-basic-card class="flex w-full lg:max-w-xl xl:max-w-xl sm:h-72 " srcImage="info_alfilo.png" title="AL FILO"
                       body='Comunidad para disfrutar Star Citizen en compañia, con un ritmo sano.'></app-basic-card>
-      <app-basic-card class="flex  w-full lg:max-w-xl xl:max-w-xl h-72" srcImage="info_style.png"
+      <app-basic-card class="flex  w-full lg:max-w-xl xl:max-w-xl sm:h-72" srcImage="info_style.png"
                       title="Estilo de juego"
                       body="Somos Pro-Billete. Cumplimos los contratos. Realizamos todo tipo de actividades, un ataque a terceros debe tener un motivo económico."></app-basic-card>
-      <app-basic-card class="flex w-full lg:max-w-xl xl:max-w-xl h-72 " srcImage="info_join.png" title="Hazte DAGA"
+      <app-basic-card class="flex w-full lg:max-w-xl xl:max-w-xl sm:h-72 " srcImage="info_join.png" title="Hazte DAGA"
                       body="Solicita tu rango de DAGA. Obtendrás acceso a Licencias, votaciones y creación de eventos."></app-basic-card>
     </div>
   </div>
