--- a/src/app/components/landing-chronology/landing-chronology.component.html
+++ b/src/app/components/landing-chronology/landing-chronology.component.html
@@ -1,6 +1,6 @@
 <div class="landing-chronology w-full bg-[url('/assets/images/background-landing-chronology.jpg')]
 bg-cover bg-center sm:pb-20 relative flex flex-col">
-  <div class="absolute h-[95%] top-0 left-0 border-b-2 border-b-2 border-r-2 rounded-br-2xl sm:w-0
+  <div class="absolute h-[95%] top-0 left-0 border-b-2 border-r-2 rounded-br-2xl sm:w-0
   lg:w-[50%] lg:min-w-[754px]"></div>
   <div class="text-[9rem] text-center font-capital-daren-italic lg:w-[50%] lg:min-w-[754px] text-shadow">cronología</div>
     <div #carouselChronology class="custom-corusel lg:hidden">
