--- a/src/app/components/basic-card/basic-card.component.html
+++ b/src/app/components/basic-card/basic-card.component.html
@@ -1,4 +1,4 @@
-<div class="card border w-full bg-black shadow-xl">
+<div class="card border w-full bg-black shadow-xl h-full">
   <div class="flex h-full">
     <img src="/assets/images/{{srcImage}}" alt="Logo" class="hidden xxs:block rounded-l-2xl w-4/12 object-cover" />
     <div class="card-body w-8/12 text-center">
