--- a/src/app/components/landing-chronology/landing-chronology.component.css
+++ b/src/app/components/landing-chronology/landing-chronology.component.css
@@ -1,14 +1,14 @@
-.landing-chronology {
-  .custom-corusel {
-    .flickity-viewport {
-      height: 22rem;
-    }
-    .carousel-cell {
-      width: 95%;
-      height: 22rem;
-    }
+.custom-corusel-chronology {
+  .flickity-viewport {
+    height: 22rem;
   }
+  .carousel-cell {
+    width: 95%;
+    height: 22rem;
+  }
+}
 
+.landing-chronology {
   .event-list-lg {
     -ms-overflow-style: none;
     scrollbar-width: none;
