--- a/src/app/components/creator-card/creator-card.component.html
+++ b/src/app/components/creator-card/creator-card.component.html
@@ -1,34 +1,34 @@
-<div class="card border-2 bg-secondary p-10">
+<div class="card border-2 bg-secondary p-3 sm:p-10">
   <div class="flex flex-col gap-4 gap-y-10">
-    <div class="flex gap-5 ">
-      <div class="flex flex-col items-center gap-4 w-1/3  ">
+    <div class="flex flex-col sm:flex-row gap-5">
+      <div class="order-2 sm:order-1 flex flex-col items-center gap-4 sm:w-1/3">
         <div class="flex gap-4 self-start w-full items-center">
           <div class="w-28 rounded-full">
             <img src="/assets/images/{{creatorLogo}}" class="rounded-full" alt="creatorLogo"/>
           </div>
-          <p class="w-full text-center text-5xl font-medium ">{{creatorName}}</p>
+          <p class="w-full text-center md:text-5xl font-medium ">{{creatorName}}</p>
         </div>
         <div class="w-full h-full">
           {{creatorDescription}}
         </div>
       </div>
-      <div class="w-2/3 ">
+      <div class="md:w-2/3">
         <video #myVideo class=" max-w-2k object-cover w-full border-2 rounded-2xl" autoplay loop muted playsinline
                src="assets/videos/{{creatorVideo}}"></video>
       </div>
     </div>
-    <div class="w-full flex justify-center ">
-      <div class=" flex gap-x-20">
+    <div class="w-full flex justify-center">
+      <div class=" flex gap-3 xxs:gap-10 sm:gap-x-20">
         <a href="{{creatorTwitch}}" target="_blank"
-          class="btn card bg-[#6441a5] w-16 h-16 border-2 border-white p-2 flex place-content-center place-items-center">
+          class="btn card bg-[#6441a5] w-14 h-14 xxs:w-16 xxs:h-16 border-2 border-white p-2 flex place-content-center place-items-center">
           <img src="/assets/images/twitch.svg" alt="Logo" class="w-8"/>
         </a>
         <a href="{{creatorYoutube}}" target="_blank"
-          class="btn card bg-black w-16 h-16 border-2 border-white p-2 flex place-content-center place-items-center">
+          class="btn card bg-black w-14 h-14 xxs:w-16 xxs:h-16 border-2 border-white p-2 flex place-content-center place-items-center">
           <img src="/assets/images/youtube.svg" alt="Logo" class="w-10"/>
         </a>
         <a href="{{creatorX}}" target="_blank"
-          class="btn card bg-black w-16 h-16 border-2 border-white p-2 flex place-content-center place-items-center">
+          class="btn card bg-black w-14 h-14 xxs:w-16 xxs:h-16 border-2 border-white p-2 flex place-content-center place-items-center">
           <app-svg-icon class="x-svg" path="assets/images/x.svg"></app-svg-icon>
         </a>
       </div>
