remove code, refactro image location, add favicon

--- a/src/app/components/creator-card/creator-card.component.html
+++ b/src/app/components/creator-card/creator-card.component.html
@@ -4,7 +4,7 @@
       <div class="order-2 sm:order-1 flex flex-col items-center gap-4 sm:w-1/3">
         <div class="flex gap-4 self-start w-full items-center">
           <div class="w-28 rounded-full">
-            <img src="/assets/images/{{creatorLogo}}" class="rounded-full" alt="creatorLogo"/>
+            <img src="/assets/images/content-creator/{{creatorLogo}}" class="rounded-full" style="" alt="creatorLogo"/>
           </div>
           <p class="w-full text-center md:text-5xl font-medium ">{{creatorName}}</p>
         </div>
@@ -13,7 +13,7 @@
         </div>
       </div>
       <div class="md:w-2/3">
-        <video #myVideo class=" max-w-2k object-cover w-full border-2 rounded-2xl" autoplay loop muted playsinline
+        <video #myVideo class="object-cover w-full border-2 rounded-2xl" autoplay loop muted playsinline
                src="assets/videos/{{creatorVideo}}"></video>
       </div>
     </div>
