--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -15,12 +15,12 @@
       </a>
     </div>
     <div class="flex flex-wrap gap-5 justify-center px-2 sm:px-10 pb-20">
-      <app-basic-card class="flex w-full lg:max-w-xl xl:max-w-xl sm:h-72 " srcImage="info_alfilo.png" title="AL FILO"
+      <app-basic-card class="flex w-full lg:max-w-xl xl:max-w-xl sm:h-72 " srcImage="info/info_alfilo.png" title="AL FILO"
                       body='Comunidad para disfrutar Star Citizen en compañia, con un ritmo sano.'></app-basic-card>
-      <app-basic-card class="flex  w-full lg:max-w-xl xl:max-w-xl sm:h-72" srcImage="info_style.png"
+      <app-basic-card class="flex  w-full lg:max-w-xl xl:max-w-xl sm:h-72" srcImage="info/info_style.png"
                       title="Estilo de juego"
                       body="Somos Pro-Billete. Cumplimos los contratos. Realizamos todo tipo de actividades, un ataque a terceros debe tener un motivo económico."></app-basic-card>
-      <app-basic-card class="flex w-full lg:max-w-xl xl:max-w-xl sm:h-72 " srcImage="info_join.png" title="Hazte DAGA"
+      <app-basic-card class="flex w-full lg:max-w-xl xl:max-w-xl sm:h-72 " srcImage="info/info_join.png" title="Hazte DAGA"
                       body="Solicita tu rango de DAGA. Obtendrás acceso a Licencias, votaciones y creación de eventos."></app-basic-card>
     </div>
   </div>
