--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -3,4 +3,4 @@
 <app-landing-chronology></app-landing-chronology>
 <app-landing-creators></app-landing-creators>
 <app-landing-contact-us></app-landing-contact-us>
-<app-footer class="footer-test"></app-footer>
+<app-footer></app-footer>
