--- a/src/app/components/creator-card/creator-card.component.html
+++ b/src/app/components/creator-card/creator-card.component.html
@@ -1,7 +1,7 @@
 <div class="card border-2 bg-secondary p-3 sm:p-10">
   <div class="flex flex-col gap-4 gap-y-10">
     <div class="flex flex-col sm:flex-row gap-5">
-      <div class="order-2 sm:order-1 flex flex-col items-center gap-4 sm:w-1/3">
+      <div class="flex flex-col items-center gap-4 sm:w-1/3">
         <div class="flex gap-4 self-start w-full items-center">
           <div class="w-28 rounded-full">
             <img src="/assets/images/content-creator/{{creatorLogo}}" class="rounded-full" style="" alt="creatorLogo"/>
@@ -12,7 +12,7 @@
           {{creatorDescription}}
         </div>
       </div>
-      <div class="md:w-2/3">
+      <div class="order-1 md:w-2/3">
         <video #myVideo class="object-cover w-full border-2 rounded-2xl" autoplay loop muted playsinline
                src="assets/videos/{{creatorVideo}}"></video>
       </div>
