same button in login mobile and desktop

--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -4,16 +4,8 @@
   <div class="flex flex-col items-center gap-10">
     <p class="font-capital-daren text-shadow text-5xl xs:text-[4.2rem] sm:text-[4.5rem] md:text-[5rem] md:text-7xl lg:text-8xl xl:text-9xl text-center">LA AVENTURA TE ESPERA</p>
     <a href="https://discord.com/invite/ADgezdG" target="_blank"
-       class="btn font-normal md:btn-lg text-black ring-2 ring-white rounded-2xl text-[2rem] xxs:text-[2rem] xs:px-[1.5rem] sm:text-[2.2rem] md:text-[2.5rem] font-capital-daren lg:hidden">Únete
+       class="btn font-normal md:btn-lg text-black ring-2 ring-white rounded-2xl text-[2rem] xxs:text-[2rem] xs:px-[1.5rem] sm:text-[2.2rem] md:text-[2.5rem] font-capital-daren">Únete
       a AlFilo</a>
-    <div class="hidden lg:block">
-      <a href="https://discord.com/invite/ADgezdG" target="_blank"
-         class="btn w-20 discord-anim rounded-full hover:bg-black bg-black border-0 border-white ">
-        <app-svg-icon class="discord-svg w-10 h-10 svg-move absolute z-10"
-                      path="assets/images/discord.svg"></app-svg-icon>
-        <p class="absolute text-anim z-0">Únete a AlFilo</p>
-      </a>
-    </div>
     <div class="flex flex-wrap gap-5 justify-center px-2 sm:px-10 pb-20">
       <app-basic-card class="flex w-full lg:max-w-xl xl:max-w-xl sm:h-72 " srcImage="info/info_alfilo.png" title="AL FILO"
                       body='Comunidad para disfrutar Star Citizen en compañia, con un ritmo sano.'></app-basic-card>
