changes determinated by munky and chucker

--- a/src/app/components/basic-card/basic-card.component.html
+++ b/src/app/components/basic-card/basic-card.component.html
@@ -1,9 +1,9 @@
 <div class="card border w-full bg-black shadow-xl h-full">
   <div class="flex h-full">
-    <img src="/assets/images/{{srcImage}}" alt="Logo" class="hidden xxs:block rounded-l-2xl w-6/12 sm:w-4/12 object-cover" />
-    <div class="card-body w-6/12 sm:w-8/12">
-      <h2 class="card-title text-white text-2xl lg:text-3xl">{{title}}</h2>
-      <p class="text-white text-lg lg:text-xl">{{body}}</p>
+    <img src="/assets/images/{{srcImage}}" alt="Logo" class="hidden xxs:block rounded-l-2xl w-4/12 sm:w-4/12 object-cover" />
+    <div class="card-body w-8/12 sm:w-8/12">
+      <h2 class="card-title font-capital-daren font-normal text-white text-[2rem] lg:text-3xl">{{title}}</h2>
+      <p class="text-white md:text-lg lg:text-xl">{{body}}</p>
     </div>
   </div>
 </div>
