--- a/src/app/components/landing-contact-us/landing-contact-us.component.html
+++ b/src/app/components/landing-contact-us/landing-contact-us.component.html
@@ -1,4 +1,4 @@
-<div class="landing-contact-us w-full bg-[url('/assets/images/bg-contact-us.jpg')] bg-cover bg-center py-20">
+<div class="landing-contact-us w-full py-20">
   <div class="flex flex-col justify-center gap-10">
     <div>
       <p class="font-capital-daren-italic text-[2.5rem] leading-[4.5rem] xxxs:text-[3rem] xxxs:leading-[5rem] md:text-[3.5rem] md:leading-[2rem] text-center text-shadow">contacta con</p>
