--- a/src/app/components/creator-card/creator-card.component.html
+++ b/src/app/components/creator-card/creator-card.component.html
@@ -1,4 +1,4 @@
-<div class="card border-2 bg-secondary p-3 sm:p-10">
+<!-- <div class="p-3 h-[40rem] sm:p-10">
   <div class="flex flex-col gap-4 gap-y-10">
     <div class="flex flex-col sm:flex-row gap-5">
       <div class="flex flex-col items-center gap-4 sm:w-1/3">
@@ -6,7 +6,7 @@
           <div class="w-28 rounded-full">
             <img src="/assets/images/content-creator/{{creatorLogo}}" class="rounded-full" style="" alt="creatorLogo"/>
           </div>
-          <p class="w-full text-center md:text-5xl font-medium ">{{creatorName}}</p>
+          <p class="w-full text-center md:text-left md:text-5xl font-medium ">{{creatorName}}</p>
         </div>
         <div class="w-full h-full">
           {{creatorDescription}}
@@ -15,6 +15,40 @@
       <div class="order-1 md:w-2/3">
         <video #myVideo class="object-cover w-full border-2 rounded-2xl" autoplay loop muted playsinline
                src="assets/videos/{{creatorVideo}}"></video>
+      </div>
+    </div>
+    <div class="w-full flex justify-center">
+      <div class=" flex gap-3 xxs:gap-10 sm:gap-x-20">
+        <a href="{{creatorTwitch}}" target="_blank"
+          class="btn card bg-[#6441a5] w-14 h-14 xxs:w-16 xxs:h-16 border-2 border-white p-2 flex place-content-center place-items-center">
+          <img src="/assets/images/twitch.svg" alt="Logo" class="w-8"/>
+        </a>
+        <a href="{{creatorYoutube}}" target="_blank"
+          class="btn card bg-black w-14 h-14 xxs:w-16 xxs:h-16 border-2 border-white p-2 flex place-content-center place-items-center">
+          <img src="/assets/images/youtube.svg" alt="Logo" class="w-10"/>
+        </a>
+        <a href="{{creatorX}}" target="_blank"
+          class="btn card bg-black w-14 h-14 xxs:w-16 xxs:h-16 border-2 border-white p-2 flex place-content-center place-items-center">
+          <app-svg-icon class="x-svg" path="assets/images/x.svg"></app-svg-icon>
+        </a>
+      </div>
+    </div>
+  </div>
+</div> -->
+
+<div class="p-3 h-[40rem] sm:p-10">
+  <div class="flex flex-col gap-4 gap-y-10">
+    <div class="flex justify-center items-end sm:flex-row gap-5">
+      <div class="flex flex-col items-center gap-4 md:w-[25rem]">
+        <div class="flex gap-4 self-end w-full items-center">
+          <div class="w-28 rounded-full">
+            <img src="/assets/images/content-creator/{{creatorLogo}}" class="rounded-full" style="" alt="creatorLogo"/>
+          </div>
+          <p class="w-full text-center md:text-left md:text-5xl font-medium ">{{creatorName}}</p>
+        </div>
+        <div class="w-full h-full">
+          {{creatorDescription}}
+        </div>
       </div>
     </div>
     <div class="w-full flex justify-center">
