--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -1,26 +1,30 @@
-<div class="landing-activities relative flex flex-col w-full gap-5 xs:gap-20 md:gap-40 pt-10 sm:pt-20">
+<div class="landing-activities relative flex flex-col w-full gap-5 xs:gap-20 md:gap-40 pt-10 xs:pt-0 sm:pt-20">
   <video #myVideo class="absolute w-full m-auto h-[85%] top-0 left-0 object-cover bg-center -z-10" autoplay loop muted playsinline [src]="currentActivitiy.videoSrc"></video>
   <div>
     <p class="font-capital-daren-italic text-[2.9rem] leading-[2.5rem]
-    xs:text-[3.5rem] sx:leading-[1rem] sm:text-[4.5rem] sm:leading-[2rem]
-    md:text-[5.5rem] md:leading-[3rem] lg:text-[3.5rem] lg:leading-[2rem] text-center text-shadow">participa en diferentes</p>
+    xxs:text-[2rem] xxs:leading-[2rem]
+    xs:text-[2.5rem] xs:leading-[5rem]
+    sm:text-[3rem] sm:leading-[2rem]
+    md:text-[3.5rem] md:leading-[2rem] lg:text-[3.5rem] lg:leading-[2rem] text-center text-shadow">participa en diferentes</p>
     <p class="font-capital-daren-italic text-[4rem] leading-[6rem] mb-3
-    xs:text-[6rem] xs:leading-[8rem] xs:mb-8 sm:text-[8rem] sm:leading-[10rem]
-    md:text-[9rem] md:leading-[11rem] lg:text-[9rem] lg:leading-[11rem] text-center text-shadow">actividades</p>
-    <div class="flex flex-wrap justify-center gap-5 md:gap-16">
-      <button class="btn text-[2rem] lg:text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white">únete al filo</button>
-      <button class="btn bg-alfilo-blue text-[2rem] lg:text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white">juega star citizen</button>
+    xxs:text-[5.8rem] xxs:leading-[6rem]
+    xs:text-[7rem] xs:leading-[4rem] xs:mb-8
+    sm:text-[9rem] sm:leading-[10rem]
+    md:text-[9rem] md:leading-[9rem] lg:text-[9rem] lg:leading-[11rem] text-center text-shadow">actividades</p>
+    <div class="flex flex-wrap xxs:flex-nowrap justify-center gap-5 md:gap-16">
+      <button class="btn text-[2rem] xxs:text-[1.5rem] xs:w-[13.2rem] md:w-[19.5rem] md:text-[2.5rem] lg:text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white hover:bg-white">únete al filo</button>
+      <button class="btn bg-alfilo-blue text-[2rem] xs:w-[13.2rem] md:w-[19.5rem] xxs:text-[1.5rem] md:text-[2.5rem] lg:text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white hover:bg-white">juega star citizen</button>
     </div>
   </div>
-  <div class="activities-container flex">
+  <div class="activities-container flex mt-[8rem] xs:mt-[12rem] xs:m-0">
     <div class="flex flex-col md:w-full lg:min-w-[754px] lg:items-end lg:basis-6/12 lg:rounded-tr-2xl lg:border-t-2 lg:border-r-2 lg:mt-[7.6rem]">
-      <div class="activities-wrapper bg-line-bottom lg:bg-none grid grid-cols-3 grid-flow-row xxxs:w-fit xxxs:m-auto md:m-0 md:flex md:justify-between md:w-full py-3 px-10 gap-y-5 gap-x-10 xs:gap-5 lg:max-w-[47rem] lg:-mt-[7.6rem]">
+      <div class="activities-wrapper bg-line-bottom lg:bg-none grid grid-cols-3 grid-flow-row xxs:flex xxs:justify-between xxs:w-full py-5 md:py-3  px-2 xs:px-10 gap-y-5 gap-x-4 xs:gap-5 lg:max-w-[47rem] lg:-mt-[7.6rem]">
         <ng-template ngFor let-activity [ngForOf]="activities" let-i="index">
           <div (click)="changeCurrentActivity(activity.name)" [class.selected] = "currentActivitiy['name'] === activity.name" class="activity flex flex-col items-center text-white hover:text-alfilo-blue xs:gap-2 md:gap-0">
             <app-svg-icon class="svg-activity w-[10w]" [path]="'assets/images/activity/' + activity.name + '.svg'"></app-svg-icon>
-            <div class="title-activity hidden xs:block text-[1.2rem] sm:text-[1rem] font-bold lg:text-lg uppercase">{{activity.title}}</div>
-            <app-svg-icon [ngClass]="{'custom-hidden': isCurrentActivity(activity.name)}" class="svg-circle hidden md:block " [path]="'assets/images/circle.svg'"></app-svg-icon>
-            <app-svg-icon [ngClass]="{'custom-hidden': !isCurrentActivity(activity.name)}" class="svg-circle hidden md:block" [path]="'assets/images/circle-hoop.svg'"></app-svg-icon>
+            <div class="title-activity hidden lg:block text-[1.2rem] sm:text-[1rem] font-bold lg:text-lg uppercase">{{activity.title}}</div>
+            <app-svg-icon [ngClass]="{'custom-hidden': isCurrentActivity(activity.name)}" class="svg-circle hidden lg:block " [path]="'assets/images/circle.svg'"></app-svg-icon>
+            <app-svg-icon [ngClass]="{'custom-hidden': !isCurrentActivity(activity.name)}" class="svg-circle hidden lg:block" [path]="'assets/images/circle-hoop.svg'"></app-svg-icon>
           </div>
         </ng-template>
       </div>
