--- a/src/app/components/creator-card/creator-card.component.html
+++ b/src/app/components/creator-card/creator-card.component.html
@@ -42,7 +42,7 @@
       <div class="flex flex-col items-center gap-4 md:w-[25rem]">
         <div class="flex gap-4 self-end w-full items-center">
           <div class="w-28 rounded-full">
-            <img src="/assets/images/content-creator/{{creatorLogo}}" class="rounded-full" style="" alt="creatorLogo"/>
+            <img src="/assets/images/content-creator/{{creatorLogo}}" class="rounded-full" alt="creatorLogo"/>
           </div>
           <p class="w-full text-center md:text-left md:text-5xl font-medium ">{{creatorName}}</p>
         </div>
