--- a/src/app/components/landing-chronology/landing-chronology.component.html
+++ b/src/app/components/landing-chronology/landing-chronology.component.html
@@ -7,7 +7,7 @@ bg-cover bg-center sm:pb-20 relative flex flex-col pt-12 lg:pt-5 pb-28">
         <app-basic-card class="carousel-cell mr-10 w-[95%]" srcImage={{event.image}} title={{event.title}} body={{event.body}}></app-basic-card>
       </ng-template>
     </div>
-    <div class="event-list-lg h-[40rem] gap-x-10 gap-y-20 overflow-x-hidden grid-cols-2
+    <div class="event-list-lg h-[40rem] gap-x-10 gap-y-20 py-10 overflow-x-hidden grid-cols-2
     hidden sm:self-center md:w-full lg:flex lg:flex-col lg:self-start lg:h-[51rem] xl:self-center
     lg:px-10 xl:w-[80%] xl:grid xl:min-w-[754px] xl:max-w-[90rem]">
       <ng-template ngFor let-event [ngForOf]="events" let-i="index">
