added gradients in landing-join to landing-activities

--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -1,5 +1,6 @@
 <div class="landing-activities relative flex flex-col w-full gap-5 xs:gap-20 md:gap-40 pt-10 xs:pt-0 sm:pt-20">
   <video #myVideo class="absolute w-full m-auto h-[85%] top-0 left-0 object-cover bg-center -z-10" autoplay loop muted playsinline [src]="currentActivitiy.videoSrc"></video>
+  <div class="absolute w-full h-[85%] bg-gradient-to-b top-0 from-black to-35% -z-10"></div>
   <div>
     <p class="font-capital-daren-italic text-[2.9rem] leading-[2.5rem]
     xxs:text-[2rem] xxs:leading-[2rem]
