adeed intersection observer directive

--- a/src/app/components/basic-card/basic-card.component.html
+++ b/src/app/components/basic-card/basic-card.component.html
@@ -1,4 +1,4 @@
-<div class="card border w-full bg-black shadow-xl h-full "  appObserveVisibility [debounceTime]="0" (visible)="activate()"  [ngClass]="{'border-green-500': test}" >
+<div class="card border w-full bg-black shadow-xl h-full " >
   <div class="flex h-full">
     <img src="/assets/images/{{srcImage}}" alt="Logo" class="hidden xxs:block rounded-l-2xl w-4/12 sm:w-4/12 object-cover" />
     <div class="card-body w-8/12 sm:w-8/12">
