modified footer and navbar

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,8 +1,8 @@
-<footer class="footer p-10 bg-secondary text-neutral-content w-full">
-  <div>
+<footer class="footer p-5 bg-secondary text-neutral-content w-full">
+  <div class="flex items-center gap-5 justify-center w-full">
     <div class="avatar">
       <div class="w-16 rounded">
-        <img src="assets/images/logo.png" alt="Tailwind-CSS-Avatar-component" />
+        <img src="assets/images/logo.svg" alt="Tailwind-CSS-Avatar-component" />
       </div>
     </div>
     <p>AlFilo Industries Ltd.<br/>Offering trustworthy services since 2950</p>
