--- a/src/app/components/landing-activities/landing-activities.component.css
+++ b/src/app/components/landing-activities/landing-activities.component.css
@@ -1,15 +1,6 @@
 .landing-activities {
   .activities-container {
-    background: linear-gradient(transparent, 15%, black);
-
-    /* .bg-line-bottom {
-      @media (min-width: 768px) and (max-width: 1024px) {
-        background-image: linear-gradient(180deg,
-        transparent calc(81% - 1px),
-        white calc(81%),
-        transparent calc(81% + 1px));
-      }
-    } */
+    /* background: linear-gradient(transparent, 15%, black); */
 
     .activities-wrapper {
       .custom-hidden {
