--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -1,8 +1,8 @@
-<app-landing-join></app-landing-join>
-<app-landing-activities></app-landing-activities>
+<app-landing-join id="clan"></app-landing-join>
+<app-landing-activities id="actividades"></app-landing-activities>
 <div class="bg-gradient-to-t from-alfilo-dark-blue to-black -z-30">
-<app-landing-chronology></app-landing-chronology>
-<app-landing-creators></app-landing-creators>
-<app-landing-contact-us></app-landing-contact-us>
+<app-landing-chronology id="cronologia"></app-landing-chronology>
+<app-landing-creators id="creadores"></app-landing-creators>
+<app-landing-contact-us id="contacto"></app-landing-contact-us>
 <app-footer></app-footer>
 </div>
