--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,17 +1,22 @@
-<div class="navbar bg-base-100 sticky h-10 top-0 z-50">
-  <div class="navbar-start"></div>
-  <div class="navbar-center h-full ">
+<div class="navbar bg-alfilo-gray sticky h-10 top-0 z-50">
+  <div class="navbar-start h-full justify-center">
     <img src="assets/images/logo.svg" alt="AlFilo Logo" class="h-full">
   </div>
+  <!-- <div class="navbar-center h-full"></div> -->
   <div class="navbar-end">
-    <div class="w-5/6 flex justify-end">
+    <div class="w-5/6 flex justify-center">
       <div class="tabs hidden lg:inline-flex">
-        <a *ngFor="let item of navItems" routerLink="{{item.path}}" class="tab hover:bg-secondary rounded-lg "
-           [ngClass]="{'text-accent' : item.active, 'text-base-content' : !item.active}">{{item.name}}</a>
+        <a href="#clan" (click)="toggleSectionSelected('clan')" [ngClass]="{'text-alfilo-dark-blue': currentSectionSelected === 'clan'}" class="tab font-capital-daren text-[1.5rem] leading-[1rem] text-white hover:bg-secondary rounded-lg">Clan</a>
+        <a href="#actividades" (click)="toggleSectionSelected('actividades')" [ngClass]="{'text-alfilo-dark-blue': currentSectionSelected === 'actividades'}" class="tab font-capital-daren text-[1.5rem] leading-[1rem] text-white hover:bg-secondary rounded-lg">Actividades</a>
+        <a href="#cronologia" (click)="toggleSectionSelected('cronologia')" [ngClass]="{'text-alfilo-dark-blue': currentSectionSelected === 'cronologia'}" class="tab font-capital-daren text-[1.5rem] leading-[1rem] text-white hover:bg-secondary rounded-lg">Cronología</a>
+        <a href="#creadores" (click)="toggleSectionSelected('creadores')" [ngClass]="{'text-alfilo-dark-blue': currentSectionSelected === 'creadores'}" class="tab font-capital-daren text-[1.5rem] leading-[1rem] text-white hover:bg-secondary rounded-lg">Creadores</a>
+        <a href="#contacto" (click)="toggleSectionSelected('contacto')" [ngClass]="{'text-alfilo-dark-blue': currentSectionSelected === 'contacto'}" class="tab font-capital-daren text-[1.5rem] leading-[1rem] text-white hover:bg-secondary rounded-lg">Contacto</a>
+        <!-- <a *ngFor="let item of navItems" routerLink="{{item.path}}" class="tab hover:bg-secondary rounded-lg "
+           [ngClass]="{'text-accent' : item.active, 'text-base-content' : !item.active}">{{item.name}}</a> -->
       </div>
     </div>
     <div class="w-1/6 flex justify-end">
-      <div class="dropdown dropdown-end">
+      <!-- <div class="dropdown dropdown-end">
         <label *ngIf="!loggedIn" for="my-drawer-4" tabindex="0" class="btn btn-ghost btn-circle avatar">
           <app-svg-icon path="assets/images/hamburger.svg" class="hamburger-svg"></app-svg-icon>
         </label>
@@ -31,10 +36,8 @@
           <li><a>Settings</a></li>
           <li><a (click)="logout()">Logout</a></li>
         </ul>
-      </div>
+      </div> -->
     </div>
-
-
   </div>
 </div>
 
@@ -46,8 +49,8 @@
     <div class="w-full h-full bg-no-repeat bg-cover bg-fixed">
       <router-outlet></router-outlet>
     </div>
-
   </div>
+
   <div class="drawer-side ">
     <label for="my-drawer-4" class="drawer-overlay "></label>
     <ul class="menu w-2/3 lg:w-1/3 h-full p-0">
