--- a/src/app/components/landing-activities/landing-activities.component.css
+++ b/src/app/components/landing-activities/landing-activities.component.css
@@ -1,6 +1,6 @@
 .landing-activities {
   .activities-container {
-    /* background: linear-gradient(transparent, 15%, black); */
+    background: linear-gradient(transparent, 15%, black);
 
     .activities-wrapper {
       .custom-hidden {
