--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -5,7 +5,7 @@
   <div class="flex flex-col items-center gap-10">
     <p class="font-capital-daren text-shadow text-5xl xs:text-[4.2rem] sm:text-[4.5rem] md:text-[5rem] md:text-7xl lg:text-8xl xl:text-9xl text-center">LA AVENTURA TE ESPERA</p>
     <a href="https://discord.com/invite/ADgezdG" target="_blank"
-       class="btn font-normal md:btn-lg text-black ring-2 ring-white rounded-2xl text-[2rem] xxs:text-[2rem] xs:px-[1.5rem] sm:text-[2.2rem] md:text-[2.5rem] font-capital-daren">Únete
+       class="btn font-normal md:btn-lg text-black hover:bg-white ring-2 ring-white rounded-2xl text-[2rem] xxs:text-[2rem] xs:px-[1.5rem] sm:text-[2.2rem] md:text-[2.5rem] font-capital-daren">Únete
       a AlFilo</a>
     <div class="flex flex-wrap gap-5 justify-center px-2 sm:px-10 pb-20">
       <app-basic-card class="flex w-full h-60 lg:max-w-xl xl:max-w-xl sm:h-72 " srcImage="info/info_alfilo.png" title="AL FILO"
