--- a/src/app/components/landing-activities/landing-activities.component.html
+++ b/src/app/components/landing-activities/landing-activities.component.html
@@ -17,7 +17,7 @@
       <button class="btn bg-alfilo-blue text-[2rem] xs:w-[13.2rem] md:w-[19.5rem] xxs:text-[1.5rem] md:text-[2.5rem] lg:text-[2.5rem] h-auto py-3 px-8 text-black font-normal font-capital-daren border-1 border-white hover:bg-white">juega star citizen</button>
     </div>
   </div>
-  <div class="activities-container flex mt-[8rem] xs:mt-[12rem] xs:m-0">
+  <div class="activities-container flex mt-[8rem] xs:mt-[12rem] md:mt-[6rem] lg:mt-[0rem] xs:m-0">
     <div class="flex flex-col md:w-full lg:min-w-[754px] lg:items-end lg:basis-6/12 lg:rounded-tr-2xl lg:border-t-2 lg:border-r-2 lg:mt-[7.6rem]">
       <div class="activities-wrapper bg-line-bottom lg:bg-none grid grid-cols-3 grid-flow-row xxs:flex xxs:justify-between xxs:w-full py-5 md:py-3  px-2 xs:px-10 gap-y-5 gap-x-4 xs:gap-5 lg:max-w-[47rem] lg:-mt-[7.6rem]">
         <ng-template ngFor let-activity [ngForOf]="activities" let-i="index">
