fixes with munky and chucker

--- a/src/app/components/landing-contact-us/landing-contact-us.component.html
+++ b/src/app/components/landing-contact-us/landing-contact-us.component.html
@@ -36,7 +36,7 @@
         </div>
         <div>
           <a href="https://robertsspaceindustries.com/spectrum/community/ALFILO" target="_blank" class="btn font-normal text-[2rem] bg-black border-1 border-white justify-center content-center">
-            <img src="assets/images/logo.svg" class="h-full p-1" alt="">
+            <img src="assets/images/logo_256.png" class="h-full p-1" alt="">
             <span class="font-capital-daren text-[1.6rem] xxxs:text-[2rem]">spectrum</span>
           </a>
         </div>
