--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
-<div class="navbar bg-alfilo-gray sticky h-10 top-0 z-50">
+<div class="navbar bg-black sticky h-10 top-0 z-50">
   <div class="navbar-start h-full lg:justify-center">
-    <img src="assets/images/logo.svg" alt="AlFilo Logo" class="h-full">
+    <img src="assets/images/logo_icono_texto.png" alt="AlFilo Logo" class="h-full">
   </div>
   <div class="navbar-center h-full"></div>
   <div class="navbar-end">
@@ -20,7 +20,7 @@
         <label tabindex="0" class="btn btn-ghost">
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h8m-8 6h16" /></svg>
         </label>
-        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-alfilo-gray rounded-box w-52 absolute -left-[10rem]">
+        <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-black rounded-box w-52 absolute -left-[10rem]">
           <li><a href="#clan" (click)="toggleSectionSelected('clan')" [ngClass]="{'!text-alfilo-dark-blue': currentSectionSelected === 'clan'}" class="tab font-capital-daren text-[1.5rem] leading-[1rem] text-white hover:text-alfilo-blue hover:!bg-transparent rounded-lg">Clan</a></li>
           <li><a href="#actividades" (click)="toggleSectionSelected('actividades')" [ngClass]="{'!text-alfilo-dark-blue': currentSectionSelected === 'actividades'}" class="tab font-capital-daren text-[1.5rem] leading-[1rem] text-white hover:text-alfilo-blue hover:!bg-transparent rounded-lg">Actividades</a></li>
           <li><a href="#cronologia" (click)="toggleSectionSelected('cronologia')" [ngClass]="{'!text-alfilo-dark-blue': currentSectionSelected === 'cronologia'}" class="tab font-capital-daren text-[1.5rem] leading-[1rem] text-white hover:text-alfilo-blue hover:!bg-transparent rounded-lg">Cronología</a></li>
