change bg color for all sections

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<footer class="footer p-5 bg-secondary text-neutral-content w-full">
+<footer class="footer p-5 bg-black text-neutral-content w-full">
   <div class="flex items-center gap-5 justify-center w-full">
     <div class="avatar">
       <div class="w-16 rounded">
