modify content on footer

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,9 +2,9 @@
   <div class="flex items-center gap-5 justify-center w-full">
     <div class="avatar">
       <div class="w-16 rounded">
-        <img src="assets/images/logo_256.png" alt="Tailwind-CSS-Avatar-component" />
+        <img src="assets/images/made_by.png" alt="Tailwind-CSS-Avatar-component" />
       </div>
     </div>
-    <p>AlFilo Industries Ltd.<br/>Offering trustworthy services since 2950</p>
+    <p>&copy; 2953 Alfilo.org. Star Citizen&reg;, Roberts Space Industries&reg; y Cloud Imperium&reg; son marcas registradas de Cloud Imperium Rights LLC.<br/>Este proyecto es un sitio de fans y no está afiliado a Cloud Imperium Games de ninguna manera.</p>
   </div>
 </footer>
