--- a/src/app/components/landing-chronology/landing-chronology.component.html
+++ b/src/app/components/landing-chronology/landing-chronology.component.html
@@ -4,7 +4,7 @@ bg-cover bg-center sm:pb-20 relative flex flex-col pt-12 lg:pt-15 pb-28">
     <div class="text-[4rem] xxs:text-[5rem] xs:text-[6rem] md:text-[9rem] text-center font-capital-daren-italic lg:w-[50%] lg:min-w-[754px] text-shadow">cronología</div>
     <div #carouselChronology class="custom-corusel lg:hidden">
       <ng-template ngFor let-event [ngForOf]="events" let-i="index">
-        <app-basic-card class="carousel-cell mr-10 w-[95%]" srcImage={{event.image}} title={{event.title}} body={{event.body}}></app-basic-card>
+        <app-basic-card class="carousel-cell mr-10 w-[95%] xxxs:h-[15rem] xxs:h-[18rem]" srcImage={{event.image}} title={{event.title}} body={{event.body}}></app-basic-card>
       </ng-template>
     </div>
     <div class="event-list-lg h-[40rem] gap-x-10 gap-y-20 py-10 overflow-x-hidden grid-cols-2
