fix navbar positions

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -1,8 +1,10 @@
 <div class="navbar bg-black sticky h-10 top-0 z-50">
-  <div class="navbar-start h-full lg:justify-center">
-    <img src="assets/images/logo_icono_texto.png" alt="AlFilo Logo" class="h-full">
+  <div class="navbar-start h-full lg:pl-[2rem] 2xl:pl-[10rem]">
+    <img src="assets/images/logo_icono_texto.png" alt="AlFilo Logo" class="h-full hidden lg:block">
   </div>
-  <div class="navbar-center h-full"></div>
+  <div class="navbar-center h-full">
+    <img src="assets/images/logo_icono_texto.png" alt="AlFilo Logo" class="h-full block lg:hidden">
+  </div>
   <div class="navbar-end">
     <div class="w-5/6 hidden lg:flex justify-center">
       <div class="tabs lg:inline-flex">
