--- a/src/app/components/landing-join/landing-join.component.html
+++ b/src/app/components/landing-join/landing-join.component.html
@@ -7,7 +7,7 @@
     <a href="https://discord.com/invite/ADgezdG" target="_blank"
        class="btn font-normal md:btn-lg text-black hover:bg-white ring-2 ring-white rounded-2xl text-[2rem] xxs:text-[2rem] xs:px-[1.5rem] sm:text-[2.2rem] md:text-[2.5rem] font-capital-daren">Únete
       a AlFilo</a>
-    <div class="flex flex-wrap gap-5 justify-center px-2 sm:px-10 pb-20">
+    <div class="flex flex-wrap gap-5 justify-center lg:px-10 pb-20">
       <app-basic-card class="flex w-full h-60 lg:max-w-xl xl:max-w-xl sm:h-72 " srcImage="info/info_alfilo.png" title="AL FILO"
                       body='Comunidad para disfrutar Star Citizen en compañia, con un ritmo sano.'></app-basic-card>
       <app-basic-card class="flex h-60 w-full lg:max-w-xl xl:max-w-xl sm:h-72" srcImage="info/info_style.png"
