--- a/src/app/components/creator-card/creator-card.component.html
+++ b/src/app/components/creator-card/creator-card.component.html
@@ -1,15 +1,15 @@
-<div class="h-full">
-  <div class="flex h-full">
-    <div class="w-[40%] flex justify-center items-center">
+<div class="h-full xs:min-h-[25rem] sm:min-h-[26rem] md:min-h-[30rem] lg:min-h-[35rem] md:flex md:flex-col mt-[4rem]">
+  <div class="flex h-full md:w-[50%] md:gap-5 self-end">
+    <div class="w-[40%] md:w-auto flex justify-center items-center">
       <img src="/assets/images/content-creator/{{logo}}" class="rounded-full w-[5rem]" alt="creatorLogo"/>
     </div>
     <div class="w-[60%] flex justify-start items-center">
       <p class="text-center text-[2rem] md:text-left md:text-5xl font-medium">{{name}}</p>
     </div>
   </div>
-  <div class="p-5">
+  <div class="p-5 flex md:w-[50%] flex-col self-end">
     <div class="flex justify-end">
-      <p class="p-2 xxs:p-10 xxs:basis-6/12" [innerHtml]="description"></p>
+      <p class="p-2 w-[50%] md:w-full" [innerHtml]="description"></p>
     </div>
     <div class="w-full flex justify-center mt-5">
       <div class="flex gap-3 xxs:gap-10 sm:gap-x-20">
