--- a/src/app/components/landing-creators/landing-creators.component.html
+++ b/src/app/components/landing-creators/landing-creators.component.html
@@ -4,13 +4,16 @@
     <p class="font-capital-daren-italic text-[2.5rem] leading-[2.5rem] xxs:text-[3rem] xxs:leading-[3rem] xs:text-[3.5rem] xs:leading-[3.5rem] md:text-[4.5rem] md:leading-[4rem] text-shadow">CREADORES DE</p>
     <p class="font-capital-daren-italic text-[4.5rem] lg:text-[10rem] xxs:text-[5rem] xxs:leading-[6rem] xs:text-[6rem] xs:leading-[7rem] md:leading-[11rem] text-shadow">CONTENIDO</p>
   </div>
-  <swiper-container #creatorsCarousel init="false" class="w-[100vw] h-fit">
-    <ng-template ngFor let-creator [ngForOf]="creators">
-      <swiper-slide class="bg-[length:50%_auto] md:bg-contain bg-left-bottom bg-no-repeat" [ngClass]="creator.bgImage">
-        <app-creator-card class="swiper-slide mr-10 h-full w-full" logo="{{creator.logo}}" name="{{creator.name}}" description="{{creator.description}}" twitch="{{creator.twitch}}" youtube="{{creator.youtube}}" x="{{creator.x}}"></app-creator-card>
-      </swiper-slide>
-    </ng-template>
-  </swiper-container>
+  <div class="relative h-auto">
+    <swiper-container #creatorsCarousel init="false" class="w-[100vw] h-fit">
+      <ng-template ngFor let-creator [ngForOf]="creators">
+        <swiper-slide class="bg-[length:50%_auto] md:bg-contain bg-left-bottom bg-no-repeat">
+          <app-creator-card class="swiper-slide h-full w-full" logo="{{creator.logo}}" name="{{creator.name}}" description="{{creator.description}}" twitch="{{creator.twitch}}" youtube="{{creator.youtube}}" x="{{creator.x}}"></app-creator-card>
+        </swiper-slide>
+      </ng-template>
+    </swiper-container>
+    <div #creatorsCarouselBgImage [ngStyle]="{'background-image': actualBgImage}" class="bg-[length:50%_auto] lg:bg-[length:50%_auto] xl:bg-[length:40%_auto] 2xl:bg-[length:30%_auto] bg-left-bottom bg-no-repeat w-[100vw] h-[100%] absolute top-0 left-0"></div>
+  </div>
   <div class="nav-creators bg-gradient-to-r from-alfilo-dark-blue via-black to-alfilo-dark-blue backdrop-blur-lg flex justify-between items-center h-[80px]">
     <app-svg-icon class="arrow-svg arrow-left" (click)="slidePrev()" path="assets/images/arrow.svg"></app-svg-icon>
     <ng-template ngFor let-creator [ngForOf]="creators" let-i="index">
